--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -990,6 +990,11 @@ in Dynamic Paxos there is only a need to limit the pipeline length while a
 configuration change is in progress, and different changes may use different
 limits if required.
 
+\section{Related Work}
+
+As discussed above, the approach described here generalises Dynamic Paxos and
+certain flavours of Stoppable Paxos, and supports Raft-like configuration
+changes too.
 
 
 
